--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,11 +3,18 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="msapplication-TileColor" content="#da532c")
+        meta(name="msapplication-config" content="/images/browserconfig.xml")
+        link(rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png")
+        link(rel="manifest" href="/images/site.webmanifest")
+        link(rel="icon" type="image/png" sizes="192x192" href="/images/android-chrome-192x192.png")
+        link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png")
+        link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png")
+        link(rel="shortcut icon" href="/images/favicon.ico")
         title Only Messages
         script(type='text/javascript', src='/javascripts/index.js', defer)
         link(rel='stylesheet', href='/stylesheets/index.css')
         block stylesheet
-
     body 
         .container
             header 
