Add root variable

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -11,6 +11,7 @@
 	--light-scheme-color: #000;
 	--light-scheme-highlight-color: #175073;
 	--light-scheme-bgc: #dcd6d6;
+	--light-scheme-main: #f5f8fe;
 	--light-scheme-shadow: #bbbdc3;
 
 	--light-button-link-hover-bgc: #a1a1a1;
