Add script to load "changeDarkScheme"

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,7 @@ html(lang="en")
         link(rel='stylesheet', href='/stylesheets/index.css')
         block stylesheet
     body 
+        script(type='text/javascript', src='/javascripts/changeDarkScheme.js')
         .container
             header 
                 div.logo
