Add root variable

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -24,6 +24,8 @@
 	--dark-scheme-color: #d1d1d1;
 	--dark-scheme-highlight-color: #f2a145;
 	--dark-scheme-bgc: #0a1324;
+
+	--dark-scheme-main: #f5f8fe;
 	--dark-scheme-shadow: #cacdd4;
 
 	--dark-button-link-hover-bgc: #483b2e;
