--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -144,3 +144,25 @@
 .home .mdi--edit {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83l3.75 3.75M3 17.25V21h3.75L17.81 9.93l-3.75-3.75z'/%3E%3C/svg%3E");
 }
+
+/* dark theme */
+.dark .home h2 span {
+	color: var(--dark-scheme-highlight-color);
+}
+
+.dark .home ul li > div.date {
+	background-color: var(--dark-scheme-bgc);
+}
+
+.dark .home ul li .content .speechBalloon .triangle {
+	border-right-color: var(--dark-button-link-hover-bgc);
+}
+
+.dark .home ul li.reverse .content .speechBalloon .triangle {
+	border-left-color: var(--dark-button-link-hover-bgc);
+}
+
+.dark .home ul li .content .speechBalloon .message {
+	background-color: var(--dark-button-link-hover-bgc);
+	box-shadow: none;
+}
