Change a element href

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -46,11 +46,11 @@ html(lang="en")
                                         div
                         li
                             if user
-                                a(href="/user/logout") 
+                                a(href="club/user/logout") 
                                     span.icon.mdi--logout 
                                     | Logout
                             else
-                                a(href="/user/sign-in") 
+                                a(href="club/user/sign-in") 
                                     span.icon.mdi--login
                                     | Login
                         
