--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -142,6 +142,10 @@ main {
 	background-color: var(--light-scheme-main);
 }
 
+main .user h2 {
+	margin-bottom: 20px;
+}
+
 .icon {
 	display: inline-block;
 	background-repeat: no-repeat;
