--- a/views/layout.pug
+++ b/views/layout.pug
@@ -45,7 +45,7 @@ html(lang="en")
                                     button.themeToggle(type="button")
                                         div
                         li
-                            if user
+                            if loginUser
                                 a(href="club/user/logout") 
                                     span.icon.mdi--logout 
                                     | Logout
