--- a/views/error.pug
+++ b/views/error.pug
@@ -1,12 +1,16 @@
 extends layout
 
+block stylesheet
+    link(rel='stylesheet', href='/stylesheets/error.css')
+
+
 block content
     div.error
         div.title
             span.icon.mdi--chat-alert-outline
-            h1 Service temporarily unavailable
+            h1= `${error.status} ${error.name}`
         
         div.message
             p Our apologies, there has been an error.
-            p Please come back later or you may surf over to our other pages.
+            p= error.message
 
