--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -139,6 +139,26 @@
 	margin-right: 5px;
 }
 
+.home .addMessage {
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	padding: 10px;
+	border-radius: 100%;
+	background-color: var(--light-scheme-highlight-color);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 3;
+}
+
+.home .addMessage .icon {
+	width: var(--icon-desktop-size);
+	height: var(--icon-desktop-size);
+	filter: invert(100%) sepia(1%) saturate(6118%) hue-rotate(281deg)
+		brightness(117%) contrast(64%);
+}
+
 /* icon */
 .home .mdi--delete {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M19 4h-3.5l-1-1h-5l-1 1H5v2h14M6 19a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V7H6z'/%3E%3C/svg%3E");
