Change h2 to p element

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block stylesheet
 
 block content
     div.home
-        h2 Special messages for #[span members] only
+        p Special messages for #[span members] only
         p Only members can send the messages
         ul
             each message in messages
