--- a/views/index.pug
+++ b/views/index.pug
@@ -15,8 +15,10 @@ block content
                         div.date= message.date
                     div.content
                         div.profile
-                            img.avatar(src=message.user.picture.medium, alt="User")
-                        p.name!= message.user.name.last
+                            if message.user.imageUrl
+                                img.avatar(src=message.user.imageUrl alt=message.user.name)                                
+                            else
+                                span.icon.mdi--anonymous
                         if loginUser && loginUser.isAdmin
                             div.link
                                 a(href="/") 
