Change block name

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,8 @@ html(lang="en")
         title Only Messages
         script(type='text/javascript', src='/javascripts/index.js', defer)
         link(rel='stylesheet', href='/stylesheets/index.css')
-        block stylesheet
+        
+        block head
     body 
         script(type='text/javascript', src='/javascripts/changeDarkScheme.js')
         .container
