Change link href value

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html(lang="en")
             header 
                 div.logo
                     h1 Only Messages
-                    a(href='/') 
+                    a(href='/club') 
                         img(src="/images/logo.png", alt="logo")
                 nav
                     button.account(type="button")
