Add "getScrollPosition" script

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block head
     link(rel='stylesheet', href='/stylesheets/home.css')
+    script(type='text/javascript', src='/javascripts/getScrollPosition.js', defer)
 
 
 block content
