--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,25 @@ block content
                 li(class= (loginUser && loginUser.id === message.user.id ? 'reverse' : ''))
                     if message.isFirstMessageOfTheDay
                         div.date= message.date
+                    div.wrap
+                        div.content(class= (removeId && removeId === message.id ? 'remove' : '') )
+                            div.profile
+                                if loginUser
+                                    div= message.user.nameFirstLetter
+                                else
+                                    span.icon.mdi--anonymous
+                            p.name!= (!loginUser || loginUser.id  !==  message.user.id) ?  message.user.name : 'You'
+                            if loginUser && loginUser.isAdmin
+                                div.link
+                                    a(href=`/club/message/delete/${message.id}`) 
+                                        span.icon.mdi--delete
+                                    a(href=`/club/message/update/${message.id}`) 
+                                        span.icon.mdi--edit
+                            div.speechBalloon
+                                div.triangle
+                                div.message
+                                    p!= message.content
+                            p.time= message.time
                         if loginUser && removeId && removeId === message.id 
                             div.removeWrap
                                 div.alert
