Change input type text to password

--- a/views/userSignUp.pug
+++ b/views/userSignUp.pug
@@ -33,7 +33,7 @@ block content
             div
                 label(class= errors && errors.password ? 'error' : '' for="user_password") Password
                     input#user_password(
-                        type="text"
+                        type="password"
                         name="password" 
                         value!=user ? user.password : ''
                         title="The password is required." 
@@ -43,7 +43,7 @@ block content
             div
                 label(class= errors && errors.confirmPassword ? 'error' : '' for="user_confirmPassword") Confirm Password
                     input#user_confirmPassword(
-                        type="text"
+                        type="password"
                         name="confirmPassword" 
                         value!=user ? user.confirmPassword : ''
                         title="The confirm password is required." 
