--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -86,6 +86,13 @@
 	color: var(--dark-scheme-color);
 }
 
+main .delete .name {
+	display: inline-block;
+	font-size: 1.2rem;
+	font-weight: 700;
+	font-style: italic;
+	color: var(--light-scheme-highlight-color);
+}
 
 .home ul li .content {
 	display: grid;
