--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -162,6 +162,10 @@ main .delete .name {
 	padding: 0 10px;
 }
 
+.home ul li.reverse .content .name {
+	text-align: right;
+}
+
 .home ul li .content .speechBalloon {
 	grid-area: speechBalloon;
 	display: flex;
