Add message style

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -204,6 +204,7 @@ main .delete .name {
 }
 
 .home ul li.reverse .content .speechBalloon .message {
+	border-top-left-radius: 5px;
 	border-top-right-radius: 0px;
 }
 
