Change root variable
Change the "--dark-error-label-color" value to #ec7474.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -32,7 +32,7 @@
 	--dark-list-link-hover-bgc: #573614;
 
 	--dark-success-label-color: #5cb297;
-	--dark-error-label-color: #ff7575;
+	--dark-error-label-color: #ec7474;
 
 	/* icon */
 	--icon-mobile-size: 45px;
