Add title property to class "addMessage"

--- a/views/index.pug
+++ b/views/index.pug
@@ -43,5 +43,5 @@ block content
                                         a(href='/club') Cancel
                                         button.submit(type='submit') Delete      
         if loginUser
-            a.addMessage(href="/club/message/create")
+            a.addMessage(href="/club/message/create" title="Send a message")
                 span.icon.mdi--message-plus
