Move h1 element outside the class logo

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,10 +20,10 @@ html(lang="en")
         .container
             header 
                 div.logo
-                    h1 Only Messages
                     a(href='/club') 
                         img(src="/images/logo.png", alt="logo")
-                nav
+                h1  
+                    a(href='/club') Only Messages
                     button.account(type="button")
                         div.wrapIcon
                             span.icon.mdi--account
